# notify-rs

./: .gitignore  Cargo.toml  README.md
assets/: example_prompt.txt
src/: bot.rs  db.rs  errors.rs  main.rs  models.rs  parser.rs  tg.rs
