[package]
name = "notify-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite={version = "0.28.0", features=["bundled", "vtab", "array", "chrono"]}
serde={version="1", features=["derive"]}
serde_json="1"
reqwest={version="0.11.11", features=["json", "tokio-rustls"]}
chrono={version="0.4.19", features=["serde"]}
arrayvec={version="0.7.2", features=["serde"]}
fnv="1.0.7"
thiserror="1"
tokio = {version="1", features=["full"]}
deadpool-sqlite="0.5.0"
fallible-streaming-iterator="0.1.9"
url="2.2.2"
envconfig="0.10.0"
dotenv="0.15.0"
log="0.4"
env_logger="0.9.0"
chrono-tz="0.6.3"

[profile.release]
opt-level=3
lto=true
codegen-units=1